Prevent tab navigation container from wrapping

--- a/src/components/tab-navigation/TabNavigation.module.css
+++ b/src/components/tab-navigation/TabNavigation.module.css
@@ -1,6 +1,7 @@
 .tabNavigationContainer {
   flex-direction: column;
   align-items: center;
+  flex-wrap: nowrap; /* prevent unintended wrapping */
   width: 100%;
   display: flex;
   height: 100vh;
